# auto-transcribe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  splitter.py  test.py  videoproc.py
autotranscribe/: __init__.py  advanced.py  setup.py  transcribe.py  transcribe_cli.py  transcriber.py  videoproc.py
autotranscribe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
