[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", 
    "wheel", 
    "pydub >= 0.25.1",
    "pytube >= 12.1.2",
    "moviepy >= 1.0.3",
    "psutil >= 5.9.4",
    "openai-whisper >= 20230308"
]

[project]
name = "autotranscribe"
version = "0.0.3"
authors = [
  { name="Devesh Paragiri", email="devesh.paragiri@gmail.com" },
]
description = "A transcriber"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DeveshParagiri/auto-transcribe"

